Changes to Host signup v3.3 - Bolder titles - Next button now huge - Text realignment - Fixed Chozen box - Changed for charity text - Sizes are now back

--- a/app/assets/stylesheets/_homestay_index.css.scss
+++ b/app/assets/stylesheets/_homestay_index.css.scss
@@ -472,18 +472,10 @@ p.ta {
   color: #404040;
 }
 
-.hs_mhs_50_20 {
-  margin-left: 50px;
-  margin-top: -20px;
-  font-family: Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
-  font-size: 12px;
-  font-weight: 300;
-  color: #404040;
-}
-
 .hs_mhs_title {
-  font-weight:bold;
-  font-size: 15px;
+  font-weight: bold;
+  color: #404040;
+  font-size: 16px;
 }
 .hs_mhs_link:hover {
   color: #5cc1c0;
